config, view, and gemfile changes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,10 +39,9 @@
 			</div>
 
 			<% else %>
-			<p>YOU WERE CAUGHT BY FILCH, TRY AGAIN!!</p>
-			<end>
+			<p>YOU WERE CAUGHT BY FILCH, TRY AGAIN!! <%= @error %></p>
+			<% end %>
 
-			</div>
 		</div>
 	</div>
-</div>	
+</div>
